--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "ask-lowdb-persistence-adapter",
   "version": "0.0.1",
   "description": "An Alexa Skills Kit persistence adapter for Lowdb",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "files": [
+    "src"
+  ],
   "keywords": [
     "ask",
     "alexa",
@@ -16,5 +19,11 @@
     "lowdb"
   ],
   "author": "Blake Mealey",
-  "license": "MIT"
+  "license": "MIT",
+  "peerDependencies": {
+    "lowdb": "^1.0.0"
+  },
+  "devDependencies": {
+    "lowdb": "^1.0.0"
+  }
 }
